add query for searching by doctor name

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <form id="formOne">
-      <input id="healthcondition" type="text" name="condition">
+  Please enter your health condition: <input id="healthcondition" type="text" name="condition">
+  Please enter the first name of the doctor:<input id="doctorName" type="text" name="doctorName">
       <button type="submit" name="button"> Search </button>
     </form>
   </body>
