displaying doctor first and last name on to UI

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,13 @@
   Please enter the first name of the doctor:<input id="doctorName" type="text" name="doctorName">
       <button type="submit" name="button"> Search </button>
     </form>
+    <div class="firstName">
+
+    </div>
+    <br>
+    <br>
+    <div class="lastName">
+
+    </div>
   </body>
 </html>
