--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Doctor Search</h1>
     <form id="formOne">
   Please enter your health condition: <input id="healthcondition" type="text" name="condition">
   Please enter the first name of the doctor:<input id="doctorName" type="text" name="doctorName">
