if there is no doctor then a custom message will appear

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   Please enter the first name of the doctor:<input id="doctorName" type="text" name="doctorName">
       <button type="submit" name="button"> Search </button>
     </form>
+    <div class="errorMessage">
+      <h1> THERE ISNT A DOCTOR BY THIS SPECIFIC NAME FOR YOUR NEEDS, LEAVE THE FIELD BLANK OR CHOOSE ANOTHER DOCTOR. </h1>
+    </div>
     <div class="firstName">
 
     </div>
