adds template display

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
     <div class="firstName">
 
     </div>
+    <div id="searchResult">
+    </div>
+
+      <div id="doctorTemplate">
+        <h1 class="firstLast"> First Last </h1>
+        <li class="bio"> bio </li>
+        <li class="phoneNumber"> Phone Number </li>
+        <li class="newPatients"> True or False </li>
+        <li class="address"> Adress</li>
+        <img class="doctorPic" src="">
+      </div>
+
     <br>
     <br>
 
